monitoring/grafana/service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: rackspace-system
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    k8s-app: grafana

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring
  namespace: rackspace-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/auth-secret: basic-auth-access
    ingress.kubernetes.io/auth-type: basic
spec:
  rules:
  - http:
      paths:
      - path: /monitoring
        backend:
          serviceName: grafana
          servicePort: 80
